--- a/config.toml
+++ b/config.toml
@@ -29,6 +29,7 @@ katex_enable = true
 # Whether to do syntax highlighting
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
+highlight_theme = "solarized-dark"
 
 [extra]
 # Put all your custom variables here
